@@ -1,5 +1,10 @@
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* WebServices.asmx: Add a workaround for web services
+	passing datetimes without time zone information around.
+
+2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* Makefile: Make publish and install targets synonyms.
 
 2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
